# Mern-Stack-Project-Shreyansh-Arora-

./: CURSOR_MCP_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_PLATFORMS.md  DEPLOYMENT_STEPS.md  README.md  SUBMISSION_GUIDE.md  VERCEL_DEPLOYMENT.md  clone_all_repos.sh  cursor-mcp-config.json  deploy.sh  frontend-package.json  healthcheck.py  netlify.toml  package-lock.json  package.json  railway.json  robots.txt  setup_cursor_mcp.py  setup_demo.sh  simple-deploy.html  start_website.sh
app/: root.tsx  routes.ts
assets/: 404-CEHHsHYl.js  SimpleFooter-D3e2Kd1c.js  SimpleHeader-BY4iNLwg.js  TechReq-DJseFnKL.js  UIComponents-Cq0XySjA.js  UtilityComponents-CJkG95XY.js  auth-BfsdQAL_.js  avatar-CuKkUpnS.js  chunk-C37GKA54-BZRK238W.js  circle-check-big-ruRazk5j.js  claude-code-Cy14BQNE.js  copy-DhX_FDpr.js  (+22 more)
backend/: .gitignore  ARCHIVAL_README.md  DAILY_METRICS_README.md  README.md  crontab  daily_archival_scheduler.py  daily_metrics_scheduler.py  db.sqlite3  demo_server.py  env.example  gunicorn.conf.py  mcp_server.py  nginx.conf  pyproject.toml  setup.py  test_archival.py  test_mcp_server.py
backend/capture_mcp_server/: apps.py  models.py  urls.py  views.py
backend/capture_mcp_server/migrations/: 0001_initial.py
backend/captures/: archival_service.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/captures/migrations/: 0001_initial.py  0002_capture_archived.py  0003_alter_capture_website_url.py
backend/core/: metrics_service.py  plotting_service.py  settings.py  slack_service.py  urls.py  views.py
backend/extension_download/: urls.py  views.py
backend/users/: auth_views.py  models.py  pipeline.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_profile_picture.py  0003_alter_customuser_profile_picture.py  0004_customuser_stripe_customer_id_and_more.py  0005_customuser_free_capture_limit.py  0006_remove_customuser_date_of_birth_and_more.py  0007_remove_customuser_stripe_subscription_id_and_more.py  0008_subscription_activated_at_and_more.py  0009_alter_customuser_free_capture_limit.py  0010_customuser_source.py  0011_alter_customuser_options_and_more.py
(+97 files in other folders)
